--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<form id='application-form'>
 			<div class="form-group">
 				<label for='first-name-input'>first Name:</label>
-				<input id='first-name-input' />
+				<input type='text' id='first-name-input' />
 				<div class='invalid-feedback' id='first-name-feedback'>please enter first name.</div>
 			</div>
 			<div class="form-group">
