--- a/main.html
+++ b/main.html
@@ -31,8 +31,8 @@
 				<div class='invalid-feedback' id='college-feedback'>please enter college name.</div>
 			</div>
 			<div class="form-group">
-				<label for='graduation-year-input'>Graduation:</label>
-				<select id='graduation-year-input'>
+				<label for='grad-year-select'>Graduation:</label>
+				<select id='grad-year-select'>
 					<option vlaue='' disabled selected >Selected Year</option>
 					<option value='2020'>2020</option>
 					<option value='2021'>2021</option>
@@ -43,7 +43,7 @@
 			</div>
 			<div class="form-group">
 				<label for='roll-no-input'>Roll No:</label>
-				<input type='number' id='roll-no-input'/>
+				<input type='text' id='roll-no-input'/>
 				<div class='invalid-feedback' id='roll-no-feedback'>please Enter Roll No.</div>
 			</div>
 			<div class="form-group">
