--- a/main.html
+++ b/main.html
@@ -11,27 +11,27 @@
         <h2>Internship Application Form</h2>
 		<form id='application-form'>
 			<div class="form-group">
-				<label for='first-name-input'>first Name:</label>
-				<input type='text' id='first-name-input' />
+				<label class='form-label' for='first-name-input'>First Name:</label>
+				<input type='text' class='form-control' id='first-name-input' />
 				<div class='invalid-feedback' id='first-name-feedback'>please enter first name.</div>
 			</div>
 			<div class="form-group">
-				<label for='last-name-input'>last Name:</label>
-				<input type='text' id='last-name-input' />
+				<label class='form-label' for='last-name-input'>last Name:</label>
+				<input class='form-control' type='text' id='last-name-input' />
 				<div class='invalid-feedback' id='last-name-feedback'>please enter last name.</div>
 			</div>
 			<div class="form-group">
-				<label for='email-input'>Email:</label>
-				<input type='email' id='email-input' />
+				<label class='form-label' for='email-input'>Email:</label>
+				<input class='form-control' type='email' id='email-input' />
 				<div class='invalid-feedback' id='email-feedback'>please enter last name.</div>
 			</div>
 			<div class="form-group">
-				<label for='college-input'>College:</label>
-				<input type='text' id='college-input' />
+				<label class='form-label' for='college-input'>College:</label>
+				<input class='form-control' type='text' id='college-input' />
 				<div class='invalid-feedback' id='college-feedback'>please enter college name.</div>
 			</div>
 			<div class="form-group">
-				<label for='grad-year-select'>Graduation:</label>
+				<label class='form-label' for='grad-year-select'>Graduation:</label>
 				<select id='grad-year-select'>
 					<option vlaue='' disabled selected >Selected Year</option>
 					<option value='2020'>2020</option>
@@ -42,13 +42,13 @@
 				<div class='invalid-feedback' id='graduation-year-feedback'>please select your graduation year.</div>
 			</div>
 			<div class="form-group">
-				<label for='roll-no-input'>Roll No:</label>
-				<input type='text' id='roll-no-input'/>
+				<label class='form-label' for='roll-no-input'>Roll No:</label>
+				<input class='form-control' type='text' id='roll-no-input'/>
 				<div class='invalid-feedback' id='roll-no-feedback'>please Enter Roll No.</div>
 			</div>
 			<div class="form-group">
-				<input type='checkbox' id='conditions-checkbox'/>
-				<label for='conditions-checkbox'>agree terms and conditions.</label>
+				<input class='form-control' type='checkbox' id='conditions-checkbox'/>
+				<label class='form-label' for='conditions-checkbox'>agree terms and conditions.</label>
 				<div class='invalid-feedback' id='conditions-feedback'>You must agree before submitting.</div>
 			</div>
 			<button type='submit'>Submit term</button>
