--- a/main.html
+++ b/main.html
@@ -12,22 +12,22 @@
 		<form id='application-form'>
 			<div class="form-group">
 				<label class='form-label' for='first-name-input'>First Name:</label>
-				<input type='text' class='form-control' id='first-name-input' />
+				<input type='text' class='form-control' id='first-name-input' required />
 				<div class='invalid-feedback' id='first-name-feedback'>please enter first name.</div>
 			</div>
 			<div class="form-group">
 				<label class='form-label' for='last-name-input'>last Name:</label>
-				<input class='form-control' type='text' id='last-name-input' />
+				<input class='form-control' type='text' id='last-name-input' required />
 				<div class='invalid-feedback' id='last-name-feedback'>please enter last name.</div>
 			</div>
 			<div class="form-group">
 				<label class='form-label' for='email-input'>Email:</label>
-				<input class='form-control' type='email' id='email-input' />
+				<input class='form-control' type='email' id='email-input' required />
 				<div class='invalid-feedback' id='email-feedback'>please enter last name.</div>
 			</div>
 			<div class="form-group">
 				<label class='form-label' for='college-input'>College:</label>
-				<input class='form-control' type='text' id='college-input' />
+				<input class='form-control' type='text' id='college-input' required />
 				<div class='invalid-feedback' id='college-feedback'>please enter college name.</div>
 			</div>
 			<div class="form-group">
@@ -43,11 +43,11 @@
 			</div>
 			<div class="form-group">
 				<label class='form-label' for='roll-no-input'>Roll No:</label>
-				<input class='form-control' type='text' id='roll-no-input'/>
+				<input class='form-control' type='text' id='roll-no-input' required />
 				<div class='invalid-feedback' id='roll-no-feedback'>please Enter Roll No.</div>
 			</div>
 			<div class="form-group">
-				<input class='form-control' type='checkbox' id='conditions-checkbox'/>
+				<input class='form-control' type='checkbox' id='conditions-checkbox' required />
 				<label class='form-label' for='conditions-checkbox'>agree terms and conditions.</label>
 				<div class='invalid-feedback' id='conditions-feedback'>You must agree before submitting.</div>
 			</div>
