--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 				<div class='invalid-feedback' id='first-name-feedback'>please enter first name.</div>
 			</div>
 			<div class="form-group">
-				<label class='form-label' for='last-name-input'>last Name:</label>
+				<label class='form-label' for='last-name-input'>Last Name:</label>
 				<input class='form-control' type='text' id='last-name-input' required />
 				<div class='invalid-feedback' id='last-name-feedback'>please enter last name.</div>
 			</div>
