--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 			</div>
 			<div class="form-group">
 				<label class='form-label' for='grad-year-select'>Graduation:</label>
-				<select id='grad-year-select'>
+				<select class='form-select' id='grad-year-select' required >
 					<option vlaue='' disabled selected >Selected Year</option>
 					<option value='2020'>2020</option>
 					<option value='2021'>2021</option>
