--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 				<div class='invalid-feedback' id='last-name-feedback'>please enter last name.</div>
 			</div>
 			<div class="form-group">
-				<label class='form-label' for='email-input'>Email:</label>
+				<label class='form-label' for='email-input'>Email Address:</label>
 				<input class='form-control' type='email' id='email-input' required />
 				<div class='invalid-feedback' id='email-feedback'>please enter last name.</div>
 			</div>
@@ -47,7 +47,7 @@
 				<div class='invalid-feedback' id='roll-no-feedback'>please Enter Roll No.</div>
 			</div>
 			<div class="form-group">
-				<input class='form-control' type='checkbox' id='conditions-checkbox' required />
+				<input class='form-check-input' type='checkbox' id='conditions-checkbox' required />
 				<label class='form-label' for='conditions-checkbox'>agree terms and conditions.</label>
 				<div class='invalid-feedback' id='conditions-feedback'>You must agree before submitting.</div>
 			</div>
