--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
 				<div class='invalid-feedback' id='graduation-year-feedback'>please select your graduation year.</div>
 			</div>
 			<div class="form-group">
-				<label class='form-label' for='roll-no-input'>Roll No:</label>
+				<label class='form-label' for='roll-no-input'>Roll No.:</label>
 				<input class='form-control' type='text' id='roll-no-input' required />
 				<div class='invalid-feedback' id='roll-no-feedback'>please Enter Roll No.</div>
 			</div>
