--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 				<div class='invalid-feedback' id='college-feedback'>please enter college name.</div>
 			</div>
 			<div class="form-group">
-				<label class='form-label' for='grad-year-select'>Graduation:</label>
+				<label class='form-label' for='grad-year-select'>Graduation Year:</label>
 				<select class='form-select' id='grad-year-select' required >
 					<option vlaue='' disabled selected >Selected Year</option>
 					<option value='2020'>2020</option>
