--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="form-group">
 				<input class='form-check-input' type='checkbox' id='conditions-checkbox' required />
-				<label class='form-label' for='conditions-checkbox'>agree terms and conditions.</label>
+				<label class='form-label' for='conditions-checkbox'>Agree to terms and conditions</label>
 				<div class='invalid-feedback' id='conditions-feedback'>You must agree before submitting.</div>
 			</div>
 			<button type='submit'>Submit term</button>
